src/test/resources/private/typechecking/pass/bonus/bonus_pass04.jova
class Cls{

    public float f, g, h;
    public int a;

    public float func(){

        f = -g;

        g = (g > h) ? f : h;
        h = f + 0.23;
        f = 12.34*g/(f+7);
        return f;
    }
}